# netdevice_test

./: .gitignore  nornir.yaml  pyproject.toml  runbook.py
inventory/: dev.xlsx
