[project]
name = "netdevice-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx>=0.2.4",
    "nornir==3.5.0",
    "nornir-netmiko==1.0.1",
    "nornir-table-inventory>=0.4.5",
    "nornir-utils>=0.2.0",
    "numpy==1.24.3",
    "openpyxl>=3.1.5",
    "pandas==1.4.3",
]
